Small doc fixes.